--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,9 +10,9 @@
 
 .app-title {
   text-align: center;
-  margin-top: 0.4em;
+  margin-top: 0.8em;
   font-family: 'Silkscreen', cursive;
   font-weight: 400;
   font-size: 5em;
-  color: #a6e9a6;
+  color: #9cdcc7;
 }
