small css changes

--- a/frontend/src/components/PlantCard/PlantCard.css
+++ b/frontend/src/components/PlantCard/PlantCard.css
@@ -1,6 +1,6 @@
 .card__container{
   margin: 1.4em;
-  border: solid #6b6b6b ;
+  border: solid #AEAEAE ;
   border-radius: 0.4em;
   padding: 1em;
   max-width: 600px;
