--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,8 @@
 
 .app-title {
   text-align: center;
-  margin-top: 0.8em;
+  margin-top: 0.4em;
+  margin-bottom: 0.2em;
   font-family: 'Silkscreen', cursive;
   font-weight: 400;
   font-size: 5em;
